[gd_scene load_steps=2 format=3 uid="uid://c0g8qvyi4vj8i"]

[ext_resource type="Script" path="res://demo.gd" id="1_iffwy"]

[node name="Demo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iffwy")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.5
offset_top = -33.0
offset_right = 122.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="PlayOpusButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Play Opus"

[node name="ConvertFromOpusButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Convert from Opus"

[node name="PlayWAVButtonButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Play WAV"

[node name="ConvertToOpusButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Convert to Opus"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[connection signal="pressed" from="GridContainer/PlayOpusButton" to="." method="_on_play_opus_button_pressed"]
[connection signal="pressed" from="GridContainer/ConvertFromOpusButton" to="." method="_on_convert_from_opus_button_pressed"]
[connection signal="pressed" from="GridContainer/PlayWAVButtonButton" to="." method="_on_play_wav_button_button_pressed"]
[connection signal="pressed" from="GridContainer/ConvertToOpusButton" to="." method="_on_convert_to_opus_button_pressed"]
